[package]
name = "upwork-wlroots-bridge"
version = "0.1.1"
edition = "2021"
authors = ["Daniel Moretti <daniel.morettiv@gmail.com>"]
license = "MIT"
description = "Implementation for Wlroots (Sway, Wayfire, Hikari, River, etc.) of Gnome Screenshot and Idle DBUS Server, which Upwork uses to capture the screen as proof of work. "
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "upwork", "wayland", "wlroots", "sway"]
repository = "https://github.com/drsh4dow/upwork-wlroots-bridge"
homepage = "https://github.com/drsh4dow/upwork-wlroots-bridge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "1.6.0"
clap = { version = "4.0.29", features = ["derive"] }
futures-lite = "1.12.0"
tokio = { version = "1.23.0", features = ["full"] }
zbus = { version = "3.6.2" }
